--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </li>
       </ul>
       <img src="img/icon.png" alt="Logo" class="footer__logo" />
-      <p class="footer__copyright">@❤️RitikGangwar</p>
+      <p class="footer__copyright"> ❤️shivgang</p>
     </footer>
 
     <div class="modal hidden">
