--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
-          designer="Ritik"
+          designer="Shivang"
           data-version-number="3.0"
         />
         <ul class="nav__links">
